--- a/miniprogram/components/blogctrl/blogctrl.wxml
+++ b/miniprogram/components/blogctrl/blogctrl.wxml
@@ -5,8 +5,10 @@
     <text>评论</text>
   </view>
   <view class="ctrl-item share">
-    <i></i>
-    <text>分享</text>
+    <button open-type="share" data-blogid="{{blogId}}" data-blog="{{blog}}" hover-class="share-hover">
+      <i></i>
+      <text>分享</text>
+    </button>
   </view>
 </view>
 
@@ -14,8 +16,7 @@
 </bee-authorize>
 <bee-modal modalShow="{{modalShow}}">
   <form slot="modal-content" report-submit="true" bind:submit="onSend">
-    <textarea name="content" class="comment-content" placeholder="请输入评论" value="{{content}}"
-      fixed="true"></textarea>
+    <textarea name="content" class="comment-content" placeholder="请输入评论" value="{{content}}" fixed="true"></textarea>
     <button class="send" size="mini" form-type="submit">评论</button>
   </form>
 </bee-modal>
